# n-body

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  server.py
pkg/: n_body.js  n_body_bg.wasm
src/: basic_renderer.rs  basic_scheduler.rs  basic_universe.rs  body.rs  configuration.rs  distributions.rs  lib.rs  renderer.rs  scheduler.rs  universe.rs  url_configuration.rs  utilities.rs
tools/: generate-readme.sh  server.py
