[package]
name = "n-body"
version = "0.1.0"
authors = ["EFanZh <efanzh@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "*"
itertools = "*"
wasm-bindgen = "*"

[dependencies.web-sys]
version = "*"
features = [
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "Screen",
    "Window",
]

[profile.release]
lto = true
