[package]
name = "n-body"
version = "0.1.0"
authors = ["EFanZh <efanzh@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "*"
console_error_panic_hook = "*"
itertools = "*"
rand = { version = "*", features = ["wasm-bindgen"] }
serde = { version = "*", features = ["derive"] }
serde_urlencoded = "*"
wasm-bindgen = "*"

[dependencies.web-sys]
version = "*"
features = [
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "EventTarget",
    "History",
    "HtmlCanvasElement",
    "HtmlElement",
    "Location",
    "Screen",
    "Window"
]

[profile.release]
lto = true
